security: headers, CORS via env, prod profile, JWT logging
- Add X-Frame-Options (deny), HSTS, Content-Type-Options, Referrer-Policy headers
- Restrict CORS allowed headers to Authorization, Content-Type, Accept
- Make CORS allowed-origins configurable via ALLOWED_ORIGINS env var
- Add application-prod.yml: SQL logging off, JWT/CORS required (no defaults)
- In prod profile JWT expiration reduced to 1h (was 24h)
- JwtUtil: distinguish ExpiredJwtException vs JwtException in logs
- JwtUtil: add slf4j logging for invalid/expired tokens

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>